docs/components/auth/1.0/index.md
# Authentication Laravel package

Laravel AWEMA.IO Auth package with ability to use standard authentication flow as well as socialite and two factor authentication.

## Installation

Via Composer

``` bash
$ composer require awema-pl/auth
```

The package will automatically register itself.

You can publish migrations with:

```bash
php artisan vendor:publish --provider="AwemaPL\Auth\AuthServiceProvider" --tag="migrations"
```

After migrations have been published you can create required tables by running:

```bash
php artisan migrate
```

And seed countries table:

```bash
php artisan db:seed --class="AwemaPL\Auth\Seeds\CountryTableSeeder"
```

You can publish config file with:

```bash
php artisan vendor:publish --provider="AwemaPL\Auth\AuthServiceProvider" --tag="config"
```

You can publish views with:

```bash
php artisan vendor:publish --provider="AwemaPL\Auth\AuthServiceProvider" --tag="views"
```

## Configuration

You can disable some of package's additional features:

```php
'enabled' => [
    'social', 
    // 'two_factor',
],
```

Add new socialite services:

```php
'services' => [
    'github' => [
        'name' => 'GitHub'
    ],
    ...
],
'github' => [
    'client_id' => env('GITHUB_CLIENT_ID'),
    ...
],
```

Configure redirects on package's routes:

```php
'redirects' => [
    'login' => '/twofactor',
    'reset_password' => '/',
    ...
],
```

Several .env variables required if additional modules were enabled in config:

```php
# SOCIALITE GITHUB
GITHUB_CLIENT_ID=
GITHUB_CLIENT_SECRET=
GITHUB_REDIRECT_URL=http://auth.test/login/github/callback

# 2FA AUTHY
AUTHY_SECRET=
```

If you enabled social and/or two factor authentication add respective traits to User model class:

```php
use AwemaPL\Auth\Models\Traits\HasSocialAuthentication;
use AwemaPL\Auth\Models\Traits\HasTwoFactorAuthentication;

class User extends Authenticatable
{
    use HasSocialAuthentication, HasTwoFactorAuthentication;
}
```

## Usage

Add to routes/web.php:

```php
AwemaAuth::routes();
```

By default package will register several routes:

```
+--------+----------+--------------------------+------------------------+----------------------------------------------------------------------+--------------------------------------------------------+
| Domain | Method   | URI                      | Name                   | Action                                                               | Middleware                                             |
+--------+----------+--------------------------+------------------------+----------------------------------------------------------------------+--------------------------------------------------------+
|        | GET|HEAD | login                    | login                  | AwemaPL\Auth\Controllers\LoginController@showLoginForm                | web,guest                                              |
|        | POST     | login                    |                        | AwemaPL\Auth\Controllers\LoginController@login                        | web,guest                                              |
|        | GET|HEAD | login/twofactor/verify   | login.twofactor.index  | AwemaPL\Auth\Controllers\TwoFactorLoginController@index               | web,guest                                              |
|        | POST     | login/twofactor/verify   | login.twofactor.verify | AwemaPL\Auth\Controllers\TwoFactorLoginController@verify              | web,guest                                              |
|        | GET|HEAD | login/{service}          | login.social           | AwemaPL\Auth\Controllers\SocialLoginController@redirect               | web,guest,AwemaPL\Auth\Middlewares\SocialAuthentication |
|        | GET|HEAD | login/{service}/callback |                        | AwemaPL\Auth\Controllers\SocialLoginController@callback               | web,guest,AwemaPL\Auth\Middlewares\SocialAuthentication |
|        | POST     | logout                   | logout                 | AwemaPL\Auth\Controllers\LoginController@logout                       | web                                                    |
|        | POST     | password/email           | password.email         | AwemaPL\Auth\Controllers\ForgotPasswordController@sendResetLinkEmail  | web,guest                                              |
|        | GET|HEAD | password/reset           | password.request       | AwemaPL\Auth\Controllers\ForgotPasswordController@showLinkRequestForm | web,guest                                              |
|        | POST     | password/reset           | password.update        | AwemaPL\Auth\Controllers\ResetPasswordController@reset                | web,guest                                              |
|        | GET|HEAD | password/reset/{token}   | password.reset         | AwemaPL\Auth\Controllers\ResetPasswordController@showResetForm        | web,guest                                              |
|        | POST     | register                 |                        | AwemaPL\Auth\Controllers\RegisterController@register                  | web,guest                                              |
|        | GET|HEAD | register                 | register               | AwemaPL\Auth\Controllers\RegisterController@showRegistrationForm      | web,guest                                              |
|        | GET|HEAD | twofactor                | twofactor.index        | AwemaPL\Auth\Controllers\TwoFactorController@index                    | web,auth                                               |
|        | POST     | twofactor                | twofactor.store        | AwemaPL\Auth\Controllers\TwoFactorController@store                    | web,auth                                               |
|        | DELETE   | twofactor                | twofactor.destroy      | AwemaPL\Auth\Controllers\TwoFactorController@destroy                  | web,auth                                               |
|        | POST     | twofactor/verify         | twofactor.verify       | AwemaPL\Auth\Controllers\TwoFactorController@verify                   | web,auth                                               |
+--------+----------+--------------------------+------------------------+----------------------------------------------------------------------+--------------------------------------------------------+
```

Besides standard authentication laravel routes, package will add:

```php
# Socialite routes
'login.social'
'login/{service}/callback'

# 2FA setup and routes for enabling/disabling it
'twofactor.index', 'twofactor.store', 'twofactor.destroy', 'twofactor.verify'

# 2FA login routes
'login.twofactor.index', 'login.twofactor.verify'
```

## Testing

You can run the tests with:

```bash
composer test
```